derive-ex-tests/tests/compile_fail/compare_op/eq_with_partial_ord_by.rs
use derive_ex::derive_ex;

#[derive_ex(Eq, PartialEq)]
struct X(#[partial_ord(by = |l, r| l.len().partial_cmp(&r.len()))] String);

fn main() {}
