derive-ex-tests/tests/compile_fail/compare_op/eq_with_partial_ord_by.stderr
error: Since `#[partial_ord(by = ...)]` was specified, the default implementation of `Eq` cannot be used.
       One of the following attributes is required.

       #[eq(key = ...)]
       #[eq(by = ...)]
       #[ord(key = ...)]
       #[ord(by = ...)]
 --> tests/compile_fail/compare_op/eq_with_partial_ord_by.rs:4:29
  |
4 | struct X(#[partial_ord(by = |l, r| l.len().partial_cmp(&r.len()))] String);
  |                             ^
